# joern-lib

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: note.yml  pythonpublish.yml
api_docs/joern_lib/: client.html  client.md  graph.md  index.html  index.md  utils.html  utils.md  workspace.html  workspace.md
api_docs/joern_lib/detectors/: c.html  c.md  common.html  common.md  index.html  index.md  java.html  java.md  js.html  js.md  python.md
contrib/joern/: Dockerfile  README.md
contrib/polynote/: Dockerfile  config.yml
contrib/polynote/notebooks/joern-notes/: aws.ipynb  connman.ipynb  examples.ipynb  flask-webgoat.ipynb  maven.ipynb  torch-gnn.ipynb  vuln-spring.ipynb
joern_lib/: __init__.py  client.py  graph.py  utils.py  workspace.py
joern_lib/detectors/: __init__.py  c.py  common.py  java.py  js.py  python.py
tests/: test_graph.py  test_python.py  test_utils.py
tests/data/: c-reach.json  commons-io.slices.json  commons-text.slices.json  pdg.dot  py-reach.json  py-routes.json  reach.json
