[tool.poetry]
name = "joern-lib"
version = "0.8.1"
description = "Python library to interact with Joern server"
authors = ["Team AppThreat <cloud@appthreat.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "joern_lib"}]
homepage = "https://github.com/AppThreat/joern-lib"
repository = "https://github.com/AppThreat/joern-lib"
keywords = ["joern", "code analysis", "static analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
exclude = ["contrib", "tests"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
httpx = "^0.24.0"
websockets = "^11.0.2"
uvloop = "^0.17.0"
orjson = "^3.8.11"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pyinstaller = "^5.10.1"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
