[tool.poetry]
name = "joern-lib"
version = "0.10.1"
description = "Python library for code analysis with CPG and Joern"
authors = ["Team AppThreat <cloud@appthreat.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "joern_lib"}]
homepage = "https://github.com/AppThreat/joern-lib"
repository = "https://github.com/AppThreat/joern-lib"
keywords = ["joern", "code analysis", "static analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
exclude = ["contrib", "tests"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
httpx = "^0.24.1"
websockets = "^11.0.2"
uvloop = "^0.17.0"
orjson = "^3.9.0"
rich = "^13.4.1"
networkx = {extras = ["default"], version = "^3.1"}
pydotplus = {version = "^2.0.2", optional = true}
pygraphviz = {version = "^1.10", optional = true}

graphviz = {version = "^0.20.1", optional = true}
gensim = {version = "^4.3.1", optional = true}
pyg-lib = {version = "^0.2.0+pt20cpu", source = "pyg", optional = true}
torch-scatter = {version = "^2.1.1+pt20cpu", source = "pyg", optional = true}
torch-sparse = {version = "^0.6.17+pt20cpu", source = "pyg", optional = true}
torch-cluster = {version = "^1.6.1+pt20cpu", source = "pyg", optional = true}
torch-spline-conv = {version = "^1.2.2+pt20cpu", source = "pyg", optional = true}
torch-geometric = {version = "^2.3.1", optional = true}
torch = {version = "^2.0.1+cpu", source = "torch", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
pyinstaller = "^5.10.1"
pdoc3 = "^0.10.0"

[tool.poetry.extras]
science = ["pydotplus", "pygraphviz", "graphviz", "gensim", "pyg-lib", "torch-scatter", "torch-sparse", "torch-cluster", "torch-spline-conv", "torch-geometric", "torch"]


[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.0.0+cpu.html"
priority = "explicit"


[[tool.poetry.source]]
name = "pyg-cu117"
url = "https://data.pyg.org/whl/torch-2.0.0+cu117.html"
priority = "explicit"


[[tool.poetry.source]]
name = "pyg-cu118"
url = "https://data.pyg.org/whl/torch-2.0.0+cu118.html"
priority = "explicit"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
